[package]
name = "enum-as-inner"
version = "0.2.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
A proc-macro for deriving inner field accessor functions on enums.
"""

documentation = "https://docs.rs/enum-as-inner"
repository = "https://github.com/bluejekyll/enum-as-inner"

readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "1.0"
proc-macro2 = "0.4"
