[package]
name = "enum-as-inner"
version = "0.6.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
A proc-macro for deriving inner field accessor functions on enums.
"""

documentation = "https://docs.rs/enum-as-inner"
repository = "https://github.com/bluejekyll/enum-as-inner"

readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"
rust_2018_idioms = "warn"
unreachable_pub = "warn"

[lints.clippy]
default_trait_access = "warn"
dbg_macro = "warn"
print_stdout = "warn"
unimplemented = "warn"
use_self = "warn"
